--- a/.github/workflows/oraculo_vigilia.yml
+++ b/.github/workflows/oraculo_vigilia.yml
@@ -24,4 +24,5 @@ jobs:
           FIREBASE_JSON: ${{ secrets.FIREBASE_JSON }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python oraculo.py
